# spellchecker

./: .gitignore  .nvimrc  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  README.md
src/: bktree.hpp  destination.hpp  distance.hpp  main.cpp  spellchecker.hpp  utils.hpp
test/: bktree_test.cpp  distance_test.cpp  main.cpp  spellchecker_test.cpp
